--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -183,12 +183,33 @@ jobs:
           echo "A enviar a imagem Docker para Docker Hub"
           docker push rodrig0salv/minha-app:latest
 
-      # --- Deploy da Function App primeiro, para depois obter a URL ---
-      - name: Deploy Function App em Python (Bicep com parâmetros)
+      # --- Empacotar e Deploy do Function App antes de obter a key ---
+      - name: Empacotar código da Function App para Zip Deploy
+        run: |
+          echo "A empacotar código da Function App..."
+          cd "${AZURE_FUNCTIONAPP_PACKAGE_PATH}"
+          mkdir -p .python_packages/lib/site-packages
+          pip install --upgrade pip
+          pip install -r requirements.txt --target .python_packages/lib/site-packages
+          zip -r ../funcapp.zip .
+          ls -lh ../funcapp.zip
+
+      - name: Deploy Function App via Zip Deploy
         uses: azure/cli@v1
         with:
           inlineScript: |
-            echo "Deploy Function App ($FUNCTIONAPP_NAME) via Bicep..."
+            echo "Deploy Function App ($FUNCTIONAPP_NAME) via Zip Deploy..."
+            az functionapp deployment source config-zip \
+              --resource-group "$RG" \
+              --name "$FUNCTIONAPP_NAME" \
+              --src "$GITHUB_WORKSPACE/funcapp.zip"
+            echo "Zip Deploy da Function concluído."
+
+      - name: Deploy Function App via Bicep (para criar/inicializar recurso, caso ainda não exista)
+        uses: azure/cli@v1
+        with:
+          inlineScript: |
+            echo "Deploy Function App ($FUNCTIONAPP_NAME) via Bicep (template)..."
             az deployment group create \
               --name "deploy-funcapp-$(date +%s)" \
               --resource-group "$RG" \
@@ -207,8 +228,7 @@ jobs:
                 translatorEndpoint="" \
                 translatorKey="" \
               --only-show-errors
-            echo "Function App deployment concluído."
-
+            echo "Function App deployment via Bicep concluído."
 
       - name: Obter master key da Function App
         id: get_function_key
@@ -216,16 +236,17 @@ jobs:
         with:
           inlineScript: |
             echo "Obtendo master key da Function App '$FUNCTIONAPP_NAME'..."
+            # Usar --query "masterKey" para obter host-level master key
             MASTER_KEY=$(az functionapp keys list \
               --resource-group "$RG" \
               --name "$FUNCTIONAPP_NAME" \
-              --query "default" -o tsv)
+              --query "masterKey" -o tsv)
             if [ -z "$MASTER_KEY" ]; then
               echo "Erro: não conseguiu obter master key da Function App."
               exit 1
             fi
+            # Grava no GITHUB_OUTPUT para uso em próximas steps
             echo "FUNCTION_KEY=$MASTER_KEY" >> $GITHUB_OUTPUT
-            echo "::set-output name=FUNCTION_KEY::$MASTER_KEY"
 
       - name: Construir FUNCTION_URL_FULL
         id: set_function_url
@@ -233,7 +254,7 @@ jobs:
           FUNCTION_URL_FULL="https://${FUNCTIONAPP_NAME}.azurewebsites.net/api/SearchFunction?code=${{ steps.get_function_key.outputs.FUNCTION_KEY }}"
           echo "FUNCTION_URL_FULL=$FUNCTION_URL_FULL" >> $GITHUB_OUTPUT
 
-      # --- Agora deploy do Web App, passando a função URL e CORS se desejar ---
+      # --- Deploy do Web App com Function URL e CORS fixo para portal.azure.com ---
       - name: Deploy Web App com Function URL e CORS
         uses: azure/cli@v1
         with:
@@ -255,8 +276,12 @@ jobs:
                 containerName="${CONTAINER_NAME}" \
                 containerSasToken="${{ steps.gen_sas.outputs.SAS_TOKEN }}" \
                 functionUrl="${{ steps.set_function_url.outputs.FUNCTION_URL_FULL }}" \
-                # Exemplo: envia allowedCorsOrigins como array JSON; ajuste conforme seu Bicep aceitar:
-                allowedCorsOrigins='["https://seusite.com", "https://outrosite.com"]' \
+                # Se o template aceitar allowedCorsOrigins como string ou array:
+                # Se o seu web-app.bicep foi ajustado para CORS estático a portal.azure.com, remova este parâmetro.
+                # Caso aceite um array de origens, ajuste conforme necessário:
+                # allowedCorsOrigins='["https://portal.azure.com"]'
+                # Aqui assumimos CORS estático no Bicep, então comentamos:
+                # allowedCorsOrigins='["https://portal.azure.com"]' 
               --only-show-errors
             echo "Web App deployment concluído: $DEPLOY_NAME"
 
@@ -296,25 +321,6 @@ jobs:
             echo "ERRO: não encontrei requirements.txt em ${AZURE_FUNCTIONAPP_PACKAGE_PATH}"
             exit 1
           fi
-
-      - name: Empacotar código da Function App para Zip Deploy
-        run: |
-          echo "A empacotar código da Function App..."
-          cd "${AZURE_FUNCTIONAPP_PACKAGE_PATH}"
-          mkdir -p .python_packages/lib/site-packages
-          pip install --upgrade pip
-          pip install -r requirements.txt --target .python_packages/lib/site-packages
-          zip -r ../funcapp.zip .
-          ls -lh ../funcapp.zip
-
-      - name: Deploy Function App via Zip Deploy
-        uses: azure/cli@v1
-        with:
-          inlineScript: |
-            az functionapp deployment source config-zip \
-              --resource-group "$RG" \
-              --name "$FUNCTIONAPP_NAME" \
-              --src "$GITHUB_WORKSPACE/funcapp.zip"
 
       - name: Reiniciar Web App e Function App após deploy
         uses: azure/cli@v1
