--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -147,19 +147,19 @@ jobs:
               --only-show-errors
             echo "App Service Plan deploy concluído: $DEPLOY_NAME"
 
-      - name: Gerar SAS token Storage (opcional)
+      - name: Gerar SAS token e CONTAINER_ENDPOINT_SAS completo
         id: gen_sas
         uses: azure/cli@v1
         with:
           inlineScript: |
             ACCOUNT_NAME="${STORAGE_ACCOUNT_NAME}"
             CONTAINER_NAME="${CONTAINER_NAME}"
-            # Gera somente o token SAS para o container
+            # Gera token SAS com permissão de escrita (w) e delete (d) para overwrite:
             EXPIRY=$(date -u -d "1 day" '+%Y-%m-%dT%H:%MZ')
             sasToken=$(az storage container generate-sas \
               --account-name $ACCOUNT_NAME \
               --name $CONTAINER_NAME \
-              --permissions racld \
+              --permissions raclwd \
               --expiry $EXPIRY \
               --https-only \
               --auth-mode login \
@@ -170,8 +170,7 @@ jobs:
             blobEndpoint=$(az storage account show \
               --name "$ACCOUNT_NAME" \
               --query "primaryEndpoints.blob" -o tsv)
-            # Remover barra final, se houver
-            blobEndpoint=${blobEndpoint%/}
+            blobEndpoint=${blobEndpoint%/}   # remove possível barra final
 
             # Montar URL completo do container com SAS
             fullSasUrl="${blobEndpoint}/${CONTAINER_NAME}?${sasToken}"
@@ -265,7 +264,7 @@ jobs:
           FUNCTION_URL_FULL="https://${FUNCTIONAPP_NAME}.azurewebsites.net/api/search?code=${{ steps.get_function_key.outputs.FUNCTION_KEY }}"
           echo "FUNCTION_URL_FULL=$FUNCTION_URL_FULL" >> $GITHUB_OUTPUT
 
-      # --- Deploy do Web App com Function URL e CORS fixo para portal.azure.com ---
+      # --- Deploy do Web App com Function URL e CONTAINER_ENDPOINT_SAS ---
       - name: Deploy Web App com Function URL e CONTAINER_ENDPOINT_SAS
         uses: azure/cli@v1
         with:
